--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "rds-slow-log-parse",
-  "version": "0.0.0",
+  "version": "0.1.1",
   "description": "📃 Parse RDS log lines",
   "keywords": [
+    "RDS",
+    "aws",
     "log",
+    "slow-log",
     "parse",
     "extract",
-    "regex"
+    "regex",
+    "📃"
   ],
   "author": "Fiverr SRE",
   "license": "MIT",
