--- a/.eslintrc
+++ b/.eslintrc
@@ -1,35 +1,7 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 9,
-    "sourceType": "module"
-  },
-  "env": {
-    "node": true,
-    "es6": true
-  },
-  "globals": {},
   "extends": [
     "@fiverr/eslint-config-fiverr/rules/base",
     "@fiverr/eslint-config-fiverr/rules/es6",
-  ],
-  "rules": {
-    "comma-dangle": ["error", "always-multiline"]
-  },
-  "plugins": [
-    "log"
-  ],
-  "overrides": [
-    {
-      "files": [ "**/spec.js" ],
-      "env": {
-        "jest": true
-      }
-    },
-    {
-      "files": [ "fixtures/*" ],
-      "rules": {
-        "quotes": 0
-      },
-    }
+    "@fiverr/eslint-config-fiverr/rules/jest",
   ]
 }
