--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 defaults: &defaults
   working_directory: ~/app
   docker:
-    - image: circleci/node:8
+    - image: circleci/node:12
 
 version: 2
 jobs:
@@ -29,7 +29,7 @@ jobs:
           command: npm t
       - run:
           name: Code linting
-          command: npm run lint
+          command: npm run lint -- --plugin log
   release:
     <<: *defaults
     steps:
